--- a/src/Influunt.Host/ClientApp/public/index.html
+++ b/src/Influunt.Host/ClientApp/public/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="rss news feed agregator">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>influunt</title>
-  </head>
+    <title>influunt - rss agregator</title>
+</head>
   <body>
     <noscript>
       <strong>We're sorry but influunt doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
